--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,11 +12,14 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
-
+  cupertino_icons: ^1.0.3
+  percent_indicator: ^3.4.0
+  camera: ^0.9.4+1
+  location:
+  geolocator: ^7.7.0
   tflite: ^1.1.2
-  percent_indicator: ^2.1.1+1
-  camera: ^0.5.7+4
+  axios: ^1.0.1+1
+  http:
 
 dev_dependencies:
   flutter_test:
